[gd_scene load_steps=2 format=3 uid="uid://cqevhgfsruyol"]

[ext_resource type="Script" path="res://addons/godot-stacks-sdk/tests/MainSceneManager.gd" id="3"]

[node name="TestMainScene" type="Node2D"]
script = ExtResource("3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="WalletLabel" type="Label" parent="UI"]
offset_left = 32.0
offset_top = 48.0
offset_right = 252.0
offset_bottom = 71.0
text = "Wallet: SP1234567890abcdef"

[node name="BtcAddressesLabel" type="Label" parent="UI"]
offset_left = 32.0
offset_top = 72.0
offset_right = 218.0
offset_bottom = 121.0
text = "BTC Wallets:
bc1234567890"

[node name="CheckUserNFTsButton" type="Button" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = -312.0
offset_right = 512.0
offset_bottom = -264.0
text = "Check Stacks NFTs"

[node name="CheckUserOrdinalsButton" type="Button" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = -248.0
offset_right = 512.0
offset_bottom = -200.0
text = "Check Ordinals"

[node name="TokenAddress" type="LineEdit" parent="UI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.0
offset_top = -344.0
offset_right = 193.0
offset_bottom = -313.0
grow_horizontal = 2
grow_vertical = 2
text = "SP2W12MNM4SPV37VZHN4GCDG35G9ACG3FDKK7WF04"

[node name="TokenAddressLabel" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -432.0
offset_top = -344.0
offset_right = -198.0
offset_bottom = -320.0
grow_horizontal = 2
grow_vertical = 2
text = "STX Contract Address to check"

[node name="LogoutButton" type="Button" parent="UI"]
offset_left = 1176.0
offset_top = 16.0
offset_right = 1256.0
offset_bottom = 56.0
text = "Logout"

[node name="TabContainer" type="TabContainer" parent="UI"]
offset_top = 160.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Stacks" type="TabBar" parent="UI/TabContainer"]
layout_mode = 2

[node name="ListBg" type="ColorRect" parent="UI/TabContainer/Stacks"]
layout_mode = 0
offset_left = 44.0
offset_top = 449.0
offset_right = 1228.0
offset_bottom = 518.0
color = Color(0.152941, 0.152941, 0.160784, 1)

[node name="NftErrorLabel" type="Label" parent="UI/TabContainer/Stacks"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -568.0
offset_top = -500.0
offset_right = -352.0
offset_bottom = -476.0
text = "Failed to get NFTs"

[node name="NftList" type="ScrollContainer" parent="UI/TabContainer/Stacks"]
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 1212.0
offset_bottom = 422.0

[node name="NftListBoxContainer" type="HBoxContainer" parent="UI/TabContainer/Stacks/NftList"]
unique_name_in_owner = true
layout_mode = 2

[node name="NftListLabel" type="Label" parent="UI/TabContainer/Stacks"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 68.0
offset_top = 456.0
offset_right = 164.0
offset_bottom = 518.0
text = "NFT Collection:"

[node name="Ordinals" type="TabBar" parent="UI/TabContainer"]
visible = false
layout_mode = 2

[node name="Panel" type="Panel" parent="UI/TabContainer/Ordinals"]
layout_mode = 0
offset_left = 60.0
offset_top = 32.0
offset_right = 1212.0
offset_bottom = 488.0

[node name="InscriptionsLabel" type="TextEdit" parent="UI/TabContainer/Ordinals/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1152.0
offset_bottom = 456.0
text = "No content"
middle_mouse_paste_enabled = false

[connection signal="pressed" from="UI/CheckUserNFTsButton" to="." method="_on_CheckUserNFTsButton_pressed"]
[connection signal="pressed" from="UI/CheckUserOrdinalsButton" to="." method="_on_CheckUserOrdinalsButton_pressed"]
[connection signal="pressed" from="UI/LogoutButton" to="." method="_on_LogoutButton_pressed"]
